# distributed-inference-server

./: Cargo.toml
.kiro/specs/distributed-inference-server/: design.md  requirements.md  tasks.md
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  models.rs  queue.rs  types.rs  validator.rs
crates/inference/: Cargo.toml
crates/inference/src/: lib.rs  worker.rs
crates/server/: Cargo.toml
crates/server/src/: api.rs  config.rs  lib.rs
