[workspace]
members = ["crates/core", "crates/server", "crates/inference"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ojas"]
license = "MIT"

[workspace.dependencies]
# async runtime
tokio = { version = "1.35", features = ["full"] }

# web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# error handling - makes creating error types easy
thiserror = "1.0"
anyhow = "1.0"

# logging - structured logging for debugging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

# property based testing - generates random inputs
proptest = "1.4"

# metrics - prometheus format
prometheus = "0.13"

# configuration - load settings from files/env/cli
config = "0.14"
clap = { version = "4.4", features = ["derive"] }
