[package]
name = "inference-server"
version = "0.1.0"
edition = "2021"

[dependencies]
inference-core = { path = "../core" }

[dependencies.tokio]
workspace = true

[dependencies.axum]
workspace = true

[dependencies.tower]
workspace = true

[dependencies.tower-http]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.tracing-subscriber]
workspace = true

[dependencies.uuid]
workspace = true

[dependencies.async-trait]
workspace = true

[dependencies.prometheus]
workspace = true

[dependencies.config]
workspace = true

[dependencies.clap]
workspace = true

[dev-dependencies.proptest]
workspace = true
